# git-check-ignore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml  docs.yml  publish.yml
src/git_check_ignore/: __init__.py
tests/: test_git_check_ignore.py
