[project]
name = "git-check-ignore"
version = "1.0.0"
description = "A Python wrapper around `git` to check filenames against `.gitignore` files"
readme = "README.md"
authors = [
    { name = "Jordan Webb", email = "jordan@dangerdevices.com" }
]
requires-python = ">=3.11"
dependencies = []
keywords = ["git", "gitignore"]
license = "AGPL-3.0-only"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Software Development :: Version Control :: Git",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
#Documentation = ""
Repository = "https://github.com/dd-dockyard/git-check-ignore"
Issues = "https://github.com/dd-dockyard/git-check-ignore/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pyright]
reportUnusedCallResult = false

[tool.tox]
requires = ["tox>=4.25"]
env_list = ["3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest>=8.3.5"]
commands = [["pytest"]]
